--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@ h2 {
 <h2>Usługi cateringowe</h2>
 <p>Kiedy Ty będziesz się świetnie bawić, <em>my będziemy dla Ciebie gotować.</em> Catering "Pod Czarną Gąską" sprosta wszystkim wyzwaniom: czy będą to przekąski, spotkania klubowe, czy wystawne bankiety.</p>
 
+<h2>Tapenada (pasta z oliwek)</h2>
+<p> Tę pastę naprawdę łatwo przygotować, a na wszystkich przyjęciach jest prawdziwym przebojem. <dl>Mój ojciec zaleca:
+
+<blockquote>"Przygotuj to danie w wieczór poprzedzający przyjęcie, by smaki miały szansę się wymieszać. Przed podaniem zostaw pastę na chwilę w miejscu, w którym panuje temperatura pokojowa. W zimie możesz podać tapenade na ciepło".</dl></blockquote></p>
+
+<dl>Składniki
+<ul>
+<li>1 słoik suszonych pomidorów (250g)</li>
+<li>2 duże ząbki czosnku</li>
+<li>2/3 filiżanki oliwek typu kalamata</li>
+<li>1 łyżka kaparów</li>
+</ul>
+</dl>
+<dl><b><h2>Przygotowanie</h2></b>
+
+<p>Zmiksuj ze sobą pomidory oraz czosnek, aż uzyskasz gładką konsystencję.
+
+Dodaj kapary oraz oliwki. Kilka razy zamieszaj, by połączyły się z pastą, ale zachowały teksturę.</p></dl>
+
+Podawaj na cienkich tostach z kozim serem oraz świeżą bazylią (opcjonalne).
+
+
 <h2>Lokalizacja i godziny otwarcia</h2>
 <p>Kuchary, ul. Smaczna 13<br>
 Od poniedziałku do czwartku w godzinach od 11 do 21, <br>w piątki i soboty od 11 do 24</p>
