--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ h2 {
 
 <blockquote>"Przygotuj to danie w wieczór poprzedzający przyjęcie, by smaki miały szansę się wymieszać. Przed podaniem zostaw pastę na chwilę w miejscu, w którym panuje temperatura pokojowa. W zimie możesz podać tapenade na ciepło".</dl></blockquote></p>
 
-<dl>Składniki
+<dl>
+<dt>Składniki</dt>
 <ul>
 <li>1 słoik suszonych pomidorów (250g)</li>
 <li>2 duże ząbki czosnku</li>
